# devtools-course-practice

code/buchina-julia/: CMakeLists.txt  CTestTests.txt
code/buchina-julia/application/: calc.cpp
code/buchina-julia/include/: fraction_calculator_application.h
code/buchina-julia/src/: fraction_calculator_application.cxx
code/buchina-julia/test/: test_fraction_calculator_application.cpp
